package Candy;

import java.awt.Point;

public class line {
    public Point p1;
	public Point p2;

	public line(Point p1, Point p2) {
		super();
		this.p1 = p1;
		this.p2 = p2;
	}

}
