@startuml

title __CANDY's Class Diagram__\n

  namespace Candy {
    class Candy.Main {
        {static} + main()
    }
  }
  

  namespace Candy {
    class Candy.frame {
        ~ L1 : JLabel
        ~ backgroundImage : ImageIcon
        ~ button : JButton
        ~ button2 : JButton
        ~ screen : JFrame
        + actionPerformed()
        ~ frame()
    }
  }
  

  namespace Candy {
    class Candy.framegame {
        ~ icon : ImageIcon
        - Quitgame : JButton
        - btnNewGame : JButton
        - col : int
        - height : int
        - mainPanel : JPanel
        - row : int
        - width : int
        + actionPerformed()
        + framegame()
        + newGame()
        + run()
        + showDialogNewGame()
        - createButton()
        - createControlPanel()
        - createGraphicsPanel()
        - createMainPanel()
    }
  }
  

  namespace Candy {
    class Candy.gamerule {
        - col : int
        - emty : int
        - map : int[][]
        - row : int
        + checkTwoPoint()
        + gamerule()
        + getCol()
        + getMap()
        + getRow()
        + setCol()
        + setMap()
        + setRow()
        - checkLineX()
        - checkLineY()
        - checkmoreX()
        - checkmoreY()
        - checkrectX()
        - checkrectY()
        - createmap()
    }
  }
  

  namespace Candy {
    class Candy.graphicgame {
        - backGroundColor : Color
        - bound : int
        - btn : JButton[][]
        - col : int
        - item : int
        - p1 : Point
        - p2 : Point
        - row : int
        - size : int
        + actionPerformed()
        + execute()
        + graphicgame()
        + newGame()
        - addArrayButton()
        - createButton()
        - getIcon()
        - setDisable()
    }
  }
  

  namespace Candy {
    class Candy.line {
        + p1 : Point
        + p2 : Point
        + line()
    }
  }
  

  Candy.frame .up.|> java.awt.event.ActionListener
  Candy.frame -up-|> javax.swing.JFrame
  Candy.frame o-- Candy.framegame : f
  Candy.framegame .up.|> java.awt.event.ActionListener
  Candy.framegame .up.|> java.lang.Runnable
  Candy.framegame -up-|> javax.swing.JFrame
  Candy.framegame o-- Candy.graphicgame : graphicsPanel
  Candy.graphicgame .up.|> java.awt.event.ActionListener
  Candy.graphicgame -up-|> javax.swing.JPanel
  Candy.graphicgame o-- Candy.framegame : frame
  Candy.graphicgame o-- Candy.gamerule : gamerule
  Candy.graphicgame o-- Candy.line : line


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
